# sparkles

./: .gitignore  CMakeLists.txt  README.md  main.cpp
camera/: perspectivecamera.cpp  perspectivecamera.h
intersectables/: intersectable.cpp  intersectable.h  plane.cpp  plane.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
materials/: color.h  diffusematerial.cpp  diffusematerial.h  emissionmaterial.cpp  emissionmaterial.h  glassmaterial.cpp  glassmaterial.h  glossymaterial.cpp  glossymaterial.h  material.h  mixmaterial.h  normalmaterial.cpp  normalmaterial.h  shadelessmaterial.cpp  shadelessmaterial.h  simplediffusematerial.cpp  simplediffusematerial.h
math/: randomizer.cpp  randomizer.h  ray.cpp  ray.h  vector3.cpp  vector3.h
scene/: scene.cpp  scene.h  scenehelpers.cpp  scenehelpers.h
textures/: checkerboardtexture.cpp  checkerboardtexture.h  texture.h  uv.h
